--- a/week5/index.html
+++ b/week5/index.html
@@ -42,7 +42,20 @@
                     <div class="coding-section">
                         <h2>CODING EXERCISES</h2>
                         <br>
-                        <h3>Lorem ipsum</h3>
+                        <h3>Retry</h3>
+                        <p>Say you have a function primitiveMultiply that in 20 percent of cases multiplies two numbers 
+                            and in the other 80 percent of cases raises an exception of type MultiplicatorUnitFailure. 
+                            Write a function that wraps this clunky function and just keeps trying until a call succeeds, 
+                            after which it returns the result.</p>
+                        <button onclick="showMultiply()">Multiply 8 and 6</button>
+                        <br>
+                        <br>
+                        <h3>Using debugger Keyword</h3>
+                        <p>Check the debugger tab of the browser</p>
+                        <p>Are you eligible to vote?</p>
+                        <input id="ageYears" placeholder="Please Enter Your Age"></input>
+                        <button onclick="vote()">Check it!</button>
+                        <p id="prompt"></p>
                     </div>
                 <br>
                 <br>
@@ -54,7 +67,7 @@
             <p>&copy;2022 Rombie Lagunzad - Philippines</p>
             <p><a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
         </footer>
-        <script src="../js/week4.js"></script>
+        <script src="../js/week5exercise.js"></script>
     </body>
 
 </html>
