--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                                         <ol class="challenges">
                                             <li><a href="week4/team.html">Tic Tac Toe Game</a></li>
                                             <li><a href="week5/team1.html">Hiking App</a></li>
+                                            <li><a href="todo/index.html">Hiking App</a></li>
                                         </ol>
                                     </div>
                                 </div>
