--- a/todo/index.html
+++ b/todo/index.html
@@ -18,7 +18,7 @@
            
                 <div class="task-list">
    
-                    <ul id="all-tasks">
+                    <ul id="tasks-lists">
                          <!-- List of task will be built here -->
                     </ul>
                     <!-- <li class="single-todo">
