--- a/todo/index.html
+++ b/todo/index.html
@@ -15,31 +15,26 @@
             <h1><a class="header-link" href="https://djoko77.github.io/wdd330/">WDD 330 Portfolio</a></h1>
         </header>
         <main>
-            <h2>Todo</h2>
-           
-                <div class="task-list">
-   
-                    <ul id="tasks-lists">
-                         <!-- List of task will be built here -->
-                    </ul>
-                    <!-- <li class="single-todo">
-                        <input type="checkbox" id="task1">
-                        <label for="do1">Sample1</label>
-                        <button>X</button>
-                    </li> -->
-                    <div class="lower-section">
-                        <div class="all-task"><span id="tasks-number"></span> Task/s Left</div>
-                        <button id="all" class="filter-button active-page">All</button>
-                        <button id="active"  class="filter-button">Active</button>
-                        <button id="completed" class="filter-button">Completed</button>
-                    </div>
-            
-                    <div class="add-tasks-section">
-                        <form>
-                            <input type="text" id="add-task">
-                            <div id="add-button">+</div>
-                        </form>
-                        <p id="error-message"></p>
+            <div class="todo-app">
+                <br>
+                    <div class="task-list">
+                        <h2>TODO APP</h2> 
+                        <ul id="tasks-lists">
+                            <!-- List of task will be built here -->
+                        </ul>
+                        <div class="lower-section">
+                            <div class="all-task"><span id="tasks-number"></span> Task/s Left</div>
+                            <button id="all" class="filter-button active-page">All</button>
+                            <button id="active"  class="filter-button">Active</button>
+                            <button id="completed" class="filter-button">Completed</button>
+                        </div>
+                        <div class="add-tasks-section">
+                            <form>
+                                <input type="text" placeholder="Enter your task" id="add-task">
+                                <div id="add-button">+</div>
+                            </form>
+                            <p id="error-message"></p>
+                        </div>
                     </div>
                 </div>
         </main>
