Loading module error fix

--- a/todo/index.html
+++ b/todo/index.html
@@ -41,7 +41,7 @@
                 <p>&copy;2022 Rombie Lagunzad - Philippines</p>
                 <p><a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
         </footer>
-        <script type="module" src="../js/ToDos.js"></script>
+        <script src="../js/ToDos.js" type="module"></script>
     </body>
 
 </html>
