--- a/todo/index.html
+++ b/todo/index.html
@@ -21,9 +21,9 @@
                         <ul id="tasks-lists">
                             <!-- List of task will be built here -->
                         </ul>
-                        <div class="lower-section">
+                        <div class="lower-section" id="footer-buttons">
                             <div class="all-task"><span id="tasks-number"></span> Task/s Left</div>
-                            <button id="all" class="filter-button active-page">All</button>
+                            <button id="all" class="filter-button">All</button>
                             <button id="active"  class="filter-button">Active</button>
                             <button id="completed" class="filter-button">Completed</button>
                         </div>
