--- a/week5/team1.html
+++ b/week5/team1.html
@@ -11,6 +11,12 @@
 <ul id="hikes" class="hikeStyles">
 <!-- your hike list should be build here. -->
 </ul>
+<div>
+    <ul  id="full-comments">
+        <!-- comments -->
+    </ul>
+
+</div>
 </main>
 <script src="../js/week5.js" type="module"></script>
 </body>
