--- a/week7/index.html
+++ b/week7/index.html
@@ -54,22 +54,15 @@
                 </div>
                     <br>
                     <div class="coding-section">
-                        <h2>CODING EXERCISES</h2>
+                        <h2>CODING EXERCISE</h2>
                         <br>
-                        <h3>Retry</h3>
-                        <p>Say you have a function primitiveMultiply that in 20 percent of cases multiplies two numbers 
-                            and in the other 80 percent of cases raises an exception of type MultiplicatorUnitFailure. 
-                            Write a function that wraps this clunky function and just keeps trying until a call succeeds, 
-                            after which it returns the result.</p>
-                        <button onclick="showMultiply()">Multiply 8 and 6</button>
+                        <h3>Receiving Ajax</h3>
                         <br>
-                        <br>
-                        <h3>Using debugger Keyword</h3>
-                        <p>Check the debugger tab of the browser</p>
-                        <p>Are you eligible to vote?</p>
-                        <input id="ageYears" placeholder="Please Enter Your Age"></input>
-                        <button onclick="vote()">Check it!</button>
-                        <p id="prompt"></p>
+                        <h4>Daily Inspirational Quote</h4>
+                        <p>Click the button below to display the quote for today!</p>
+                        <button id='click-now'>Show Me the Quote</button>
+                        <div id='quote'></div>
+                        <p>Source: <a href='https://type.fit/api/quotes'>https://type.fit/api/quotes</a></p>
                     </div>
                 <br>
                 <br>
@@ -81,7 +74,7 @@
             <p>&copy;2022 Rombie Lagunzad - Philippines</p>
             <p><a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
         </footer>
-        <script src="../js/week5exercise.js"></script>
+        <script src="../js/week7.js"></script>
     </body>
 
 </html>
