--- a/week5/team1.html
+++ b/week5/team1.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8" />
 <title>Great Hikes (dynamic DOM example)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="../styles/week5.css">
+<link rel="stylesheet" href="/styles/week5.css">
 </head>
 <body>
 <main>
@@ -11,13 +11,13 @@
 <ul id="hikes" class="hikeStyles">
 <!-- your hike list should be build here. -->
 </ul>
-<div>
+<div class="all-comments">
+    <h3>Comment Section</h3>
     <ul  id="full-comments">
         <!-- comments -->
     </ul>
-
 </div>
 </main>
-<script src="../js/week5.js" type="module"></script>
+<script src="/js/week5.js" type="module"></script>
 </body>
 </html>
