fix the blocked issue

--- a/week5/team1.html
+++ b/week5/team1.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8" />
 <title>Great Hikes (dynamic DOM example)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="/styles/week5.css">
+<link rel="stylesheet" href="../styles/week5.css">
 </head>
 <body>
 <main>
@@ -18,6 +18,6 @@
     </ul>
 </div>
 </main>
-<script src="/js/week5.js" type="module"></script>
+<script src="../js/week5.js" type="module"></script>
 </body>
 </html>
