add code exercise

--- a/week8/index.html
+++ b/week8/index.html
@@ -7,7 +7,7 @@
         <title>Week 8 Activity</title>
         <meta name="description" content="week 8 activity">
         <link rel="stylesheet" href="../styles/normalize.css">
-        <link rel="stylesheet" href="../styles/main.css">
+        <link rel="stylesheet" href="../styles/week8.css">
     </head>
 
     <body>
@@ -66,8 +66,12 @@
                         <h2>CODING EXERCISE</h2>
                         <br>
                         <h3>Transform</h3>
+                        <div class="transform transform1">Move to the right when hovered! (translate)</div>
+                        <div class="transform transform2">Grow when hovered! (scale)</div>
+                        <div class="transform transform3">Rotate when hovered! (rotate)</div>
                         <br>
                         <h3>Transition</h3>
+                        <div class="transform transition">With Transition</div>
                         <br>
                         <h3>Animation</h3>
                         <br>
