add starwars page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                                     <div class="columnB">
                                         <h2 class="banner-title">Coding Activity</h2>
                                         <ol class="challenges">
+                                            <li><a href="week4/team.html">Tic Tac Toe</a></li>
+                                            <li><a href="week5/team1.html">Hiking App</a></li>
                                             <li><a href="todo/index.html">Todo App</a></li>
+                                            <li><a href="week8/starwars.html">Star Wars API</a></li>
                                         </ol>
                                     </div>
                                 </div>
