completed drag and drop

--- a/week8/index.html
+++ b/week8/index.html
@@ -84,15 +84,15 @@
                             <rect width="200" height="100" />
                         </svg> 
                         <h3>Drag and Drop</h3>
-                        <p>Choose Only One Pokemon</p>
+                        <p class="sub-pokemon">Choose Only One Pokemon</p>
                         <div id="pokemon-container" ondrop="drop(event)">
                             <img class="pokemon-img" id="charmander" src="../img/charmander.png" draggable="true">
                             <img class="pokemon-img" id="bulbasaur" src="../img/bulbasaur.png" draggable="true">
                             <img class="pokemon-img" id="squirtle" src="../img/squirtle.png" draggable="true">
                             <img class="pokemon-img" id="pikachu" src="../img/pikachu.png" draggable="true">
                         </div>
-                        <div class="pokemon-box" id="choosen-box">Drag Your Pokemon Here</div>
-                        <p id="output"></p>
+                        <div class="pokemon-box" id="pokebox">Drag Your Pokemon Here</div>
+                        <p id="pokemon-output"></p>
                     </div>
                 <br>
                 <br>
@@ -105,6 +105,7 @@
             <p><a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
         </footer>
         <script src="../js/code8.js"></script>
+        <script src="../js/canvas.js"></script>
     </body>
 
 </html>
