fix the homepage

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                                             <li><a href="week5/team1.html">Hiking App</a></li>
                                             <li><a href="todo/index.html">Todo App</a></li>
                                             <li><a href="week8/starwars.html">Star Wars API</a></li>
+                                            <li><a href="week9/drums.html">JS Drum Kit</a></li>
                                         </ol>
                                     </div>
                                 </div>
