--- a/week10/index.html
+++ b/week10/index.html
@@ -69,7 +69,7 @@
                         <br>
                         <h3>Using the Fetch API</h3>
                         <ul class="subnotes">
-                            <li>The <strong>Fetch API</strong> provides a JavaScript interface for accessing and manipulating parts of the HTTP pipeline (responses and requests)<iframe width="100%" height="330" src="//jsfiddle.net/djoko77/u8y9okjs/10/embedded/js,html,css,result/dark/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe></li>
+                            <li>The <strong>Fetch API</strong> provides a JavaScript interface for accessing and manipulating parts of the HTTP pipeline (responses and requests)</li>
                             
                             <li>A fetch() promise will reject with a TypeError when a network error is encountered or CORS is misconfigured on the server-side</li>
                             <li>Response instances are returned when fetch() promises are resolved
