change thank you page

--- a/week10/thanks-subs.html
+++ b/week10/thanks-subs.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Thank you - Newsletter/title>
+        <title>Thank you - Newsletter</title>
         <meta name="description" content="week 10 activity">
         <link rel="stylesheet" href="../styles/normalize.css">
         <link rel="stylesheet" href="../styles/week10.css">
@@ -15,11 +15,11 @@
             <h1><a class="header-link" href="https://djoko77.github.io/wdd330/">WDD 330 Portfolio</a></h1>
         </header>
         <main>
-            <h2>Thank you for signing up to our newsletter!</h2>
-            <p>Check your email to activate your subscription</p>
+            <h2 class="thanks-heading">Thank you for signing up to our newsletter!</h2>
+            <p class="thanks-subtext">Check your email to activate your subscription</p>
             <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
         </main>
-        S
+
         <footer>
             <p>&copy;2022 Rombie Lagunzad - Philippines</p>
             <p><a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
