--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                             <li><a href="todo/index.html">Todo App</a></li>
                                             <li><a href="week8/starwars.html">Star Wars API</a></li>
                                             <li><a href="week9/drums.html">JS Drum Kit</a></li>
-                                            <li><a href="week10/earthquake.html">Quake Near Me</a></li>
+                                            <li><a href="week10/earthquake.html">Quakes Near Me</a></li>
                                         </ol>
                                     </div>
                                 </div>
