--- a/week10/index.html
+++ b/week10/index.html
@@ -101,7 +101,7 @@
                             <label>Notes</label>
                             <ul>
                                 <li><span> * </span>required fields</li>
-                                <li>username must be minimum of 6 characterss and maximum of 12 characters</li>
+                                <li>username must be minimum of 6 characters and maximum of 12 characters</li>
                                 <li>password must be minimum of 8 characters, at least 1 letter and 1 number</li>
                             </ul>
                         </form>
