--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -31,7 +31,7 @@
                         </div>
                       </div>
                     <div class="search-bar">
-                        <input class="search-pokemon" id="search"  placeholder="25 or pikachu">
+                        <input class="search-pokemon" id="search"  placeholder="25 or pikachu" required>
                         <button type="button" id="searchBtn">&#x1F50E</button>
                     </div>
                     <div class="pokemon-screen">
