--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -31,8 +31,10 @@
                         </div>
                       </div>
                     <div class="search-bar">
-                        <input class="search-pokemon" id="search"  placeholder="25 or pikachu" required>
-                        <button type="button" id="searchBtn">&#x1F50E</button>
+                        <form>
+                            <input class="search-pokemon" id="search"  placeholder="25 or pikachu" required></input>
+                            <button type="button" id="searchBtn">&#x1F50E</button>
+                        </form>
                     </div>
                     <div class="pokemon-screen">
                         <div class="pokemon-data" id="pokemonData"></div>
