add home button

--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -53,6 +53,7 @@
                     <audio id="error-sound" src="./sound/error.wav"></audio>
                 </div>
             </div>
+            <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
         </main>
         
         <footer>
