--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -17,17 +17,19 @@
             <div class="wrapper">
                 <div class="left-side">
                     <div class="light-up">
-                        <div id="circle1">
-                          <div id="light-click"></div>
-                        </div>
-                        <div id="circle2" class="circleRed">
-                          <div class="light-circle2" id="light-circle2Red"></div>
-                        </div>
-                        <div id="circle2" class="circleYellow">
-                          <div class="light-circle2" id="light-circle2Yellow"></div>
-                        </div>
-                        <div id="circle2" class="circleGreen">
-                          <div class="light-circle2" id="light-circle2Green"></div>
+                        <div class="lights">
+                            <div id="circle1">
+                            <div id="light-click"></div>
+                            </div>
+                            <div id="circle2" class="circleRed">
+                            <div class="light-circle2" id="light-circle2Red"></div>
+                            </div>
+                            <div id="circle2" class="circleYellow">
+                            <div class="light-circle2" id="light-circle2Yellow"></div>
+                            </div>
+                            <div id="circle2" class="circleGreen">
+                            <div class="light-circle2" id="light-circle2Green"></div>
+                            </div>
                         </div>
                       </div>
                     <div class="search-bar">
@@ -43,10 +45,22 @@
                     <div type="button" class="pokemonBtn" id="addTeam" value="${result.id}">Add to my Team</div>
                 </div>
                 <div class="right-side">
-                    <h1 class="team-label">My Pokemon Team <span id="team-number"></span></h1>
-                    <ul class="team-party" id="pokemon-party">
-                    </ul>
-                    <div id="pokemon-full" class="data-full">
+                    <div class="connector">
+                        <div class="joint"></div>
+                        <div class="joint"></div>
+                        <div class="joint"></div>
+                        <div class="joint"></div>
+                        <div class="joint-shadow"></div>
+                      </div>
+                    <div class="right-side-cover">
+                        <div></div>
+                    </div>
+                    <div class="right-screen">
+                        <h1 class="team-label">My Pokemon Team <span id="team-number"></span></h1>
+                        <ul class="team-party" id="pokemon-party">
+                        </ul>
+                        <div id="pokemon-full" class="data-full">
+                        </div>
                     </div>
                     <audio id="search-sound" src="./sound/search.mp3"></audio>
                     <audio id="click-sound" src="./sound/click.wav"></audio>
