--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -21,28 +21,28 @@
                             <div id="circle1">
                             <div id="light-click"></div>
                             </div>
-                            <div id="circle2" class="circleRed">
+                            <div class="circle2 circleRed">
                             <div class="light-circle2" id="light-circle2Red"></div>
                             </div>
-                            <div id="circle2" class="circleYellow">
+                            <div class="circle2 circleYellow">
                             <div class="light-circle2" id="light-circle2Yellow"></div>
                             </div>
-                            <div id="circle2" class="circleGreen">
+                            <div class="circle2 circleGreen">
                             <div class="light-circle2" id="light-circle2Green"></div>
                             </div>
                         </div>
                       </div>
                     <div class="search-bar">
                         <form>
-                            <input class="search-pokemon" id="search"  placeholder="25 or pikachu" required></input>
-                            <button type="button" id="searchBtn">&#x1F50E</button>
+                                <input class="search-pokemon" id="search"  placeholder="Search by number or name (ex. 25 or pikachu)" required></input>
+                                <div type="button" class="search-btn" id="searchBtn"><span class="search-img">&#x1F50E</span></div>
                         </form>
                     </div>
                     <div class="pokemon-screen">
                         <div class="pokemon-data" id="pokemonData"></div>
                         <div  class="pokemon-desc" id="pokemonMessage"></div>
                     </div>
-                    <div type="button" class="pokemonBtn" id="addTeam" value="${result.id}">Add to my Team</div>
+                    <div type="button" class="pushable-button" id="addTeam" value="${result.id}"><span class="front">Add to my team</span></div>
                 </div>
                 <div class="right-side">
                     <div class="connector">
@@ -71,7 +71,7 @@
         </main>
         
         <footer>
-            <p>Pokedex &copy; 2022</p>
+            <p>Pokedex &copy; 2022 Rombie Lagunzad - WDD 330</p>
         </footer>
         <script src="./js/Pokemon.js" type="module"></script>
     </body>
