--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -67,7 +67,17 @@
                     <audio id="error-sound" src="./sound/error.wav"></audio>
                 </div>
             </div>
-            <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
+            <div class="instructions">
+                <h1 class="instruction">Instructions</h1>
+                <ul class="instruction-text">
+                <li>To search a pokemon click, type the id number or the name of the Pokemon in the search bar and click the search button. Please note that there only 898 searchable Pokemon</li>
+                <li>The Pokemon can be added by pressing the "ADD TO MY TEAM BUTTON"</li>
+                <li>You can add up to three Pokemon in your party</li>
+                <li>More information can be seen by clicking the name of the Pokemon in your party</li>
+                <li>You can remove the Pokemon from your party by pressing the X button</li>
+                </ul>
+           </div>
+           <a class="home-button" href="https://djoko77.github.io/wdd330/">Go Back to Homepage</a>
         </main>
         
         <footer>
