--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                         <ol class="challenges">
                                             <li><a href="week4/team.html">Tic Tac Toe</a></li>
                                             <li><a href="week5/team1.html">Hiking App</a></li>
-                                            <li><a href="todo/index.html">Todo App (Midterm Project)</a></li>
+                                            <li><a href="todo/index.html">Todo App</a></li>
                                             <li><a href="week8/starwars.html">Star Wars API</a></li>
                                             <li><a href="week9/drums.html">JS Drum Kit</a></li>
                                             <li><a href="week10/earthquake.html">Quakes Near Me</a></li>
