--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -34,7 +34,7 @@
                       </div>
                     <div class="search-bar">
                         <form>
-                                <input class="search-pokemon" id="search"  placeholder="Search by number or name (ex. 25 or pikachu)" required></input>
+                                <input class="search-pokemon" id="search"  placeholder="Search by number or name" required></input>
                                 <div type="button" class="search-btn" id="searchBtn"><span class="search-img">&#x1F50E</span></div>
                         </form>
                     </div>
